kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: leakplanting
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      imagePullSecrets:
        - name: acr-auth
      containers:
        - name: react-app
          image: leakplantingregistry.azurecr.io/react-app:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          command: ["nginx", "-g", "daemon off;"]
        #   env:
        #     - name: NODE_ENV
        #       value: "production"
        #     - name: PORT
        #       value: "80"
        #     - name: REACT_APP_FIREBASE_API_KEY
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_API_KEY
        #     - name: REACT_APP_FIREBASE_AUTH_DOMAIN
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_AUTH_DOMAIN
        #     - name: REACT_APP_FIREBASE_PROJECT_ID
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_PROJECT_ID
        #     - name: REACT_APP_FIREBASE_STORAGE_BUCKET
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_STORAGE_BUCKET
        #     - name: REACT_APP_FIREBASE_MESSAGING_SENDER_ID
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_MESSAGING_SENDER_ID
        #     - name: REACT_APP_FIREBASE_APP_ID
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_APP_ID
        #     - name: REACT_APP_FIREBASE_MEASUREMENT_ID
        #       valueFrom:
        #         secretKeyRef:
        #           name: firebase-config
        #           key: REACT_APP_FIREBASE_MEASUREMENT_ID
