kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: leakplanting
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: react-app
