kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: leakplanting
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - 20-238-135-171.nip.io # Vervang dit door jouw nip.io domein
      secretName: react-app-tls
  rules:
    - host: 20-238-135-171.nip.io # Vervang dit door jouw nip.io domein
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 80
